# rp2040-mic-demos

./: README.md
rp2040_hotword_recognition_pio/: .gitignore  README.md  platformio.ini
rp2040_hotword_recognition_pio/scripts/: serial-monitor.sh
rp2040_hotword_recognition_pio/scripts/training/: train_micro_speech_model.ipynb
rp2040_hotword_recognition_pio/src/: audio_provider.cpp  command_responder.cpp  config.h  main.cpp  main_functions.cpp  micro_speech_model_current.txt  micro_speech_model_data.cpp
rp2040_hotword_recognition_pio/src/micro_features/: micro_model_settings.h
rp2040_hotword_recognition_pio/src/testdata/: current_rec_yes_no_audio_data.txt  rec_1000ms_sample_data.h  rec_yes_no_audio_data.cpp_4s  rec_yes_no_audio_data.cpp_4s_gain10  rec_yes_no_audio_data.cpp_4s_gain10_silence  rec_yes_no_audio_data.cpp_bak_working  rec_yes_no_audio_data.h  yes_no_4s_audio_data.cpp_example  yes_no_4s_audio_data.h_example
rp2040_hotword_recognition_sdk/: .gitignore  CMakeLists.txt  README.md
rp2040_hotword_recognition_sdk/lib/: generate-tensorflow-lite-micro-library.txt
rp2040_hotword_recognition_sdk/lib/tflm/examples/micro_speech/: micro_speech_model_data.cpp
rp2040_hotword_recognition_sdk/scripts/: build-and-upload.sh  build-clean.sh  upload-uf2.sh
rp2040_hotword_recognition_sdk/src/: audio_provider.cpp  config.h  feature_provider.cpp  main_functions.cpp  micro_speech_model_data_10hotwords.cpp  micro_speech_model_data_yesno.cpp
rp2040_hotword_recognition_sdk/src/micro_features/: micro_features_generator.cpp  micro_model_settings.cpp  micro_model_settings.h
rp2040_hotword_recognition_sdk/src/testdata/: rec_yes_no_audio_data.cpp
rp2040_usb_microphone_pio/: README.md  platformio.ini
rp2040_usb_microphone_pio/src/: main.cpp
rp2040_usb_microphone_sdk/: CMakeLists.txt  README.md
rp2040_usb_microphone_sdk/lib/microphone-library-for-pico/src/: pdm_microphone.c
rp2040_usb_microphone_sdk/lib/microphone-library-for-pico/src/include/pico/: pdm_microphone.h
rp2040_usb_microphone_sdk/scripts/: build.sh
rp2040_usb_microphone_sdk/src/: main.c  usb_descriptors.c
